test/invalid/invalid_measure_argument.qt
function main() -> int {
    int x = 5;
    bit result = measure x; 
    return 0;
}